fix: working on tablets

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    margin-top: 6rem;
+    margin-top: 2rem;
     width: 100%;
     height: auto;
     background: var(--blue-700);
