--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -8,6 +8,7 @@
 
     width: 100%;
     margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 
 .loading {
