--- a/src/pages/PageCripto/PageCripto.module.css
+++ b/src/pages/PageCripto/PageCripto.module.css
@@ -252,6 +252,7 @@ td {
       flex-direction: column;
       align-items: center;
       height: auto;
+      gap: 3rem
     }
   
     .coinInfoContainer {
@@ -302,20 +303,17 @@ td {
         font-size: 1.5rem;
         font-weight: 900;
     }
-}
-  
-  /* Para telas com largura de até 576px */
-@media (max-width: 576px) {
-.coinInfoTitle {
-    flex-direction: column;
-    align-items: center;
-}
 
-.coinInfoTitle h1 {
-    font-size: 2rem;
-}
-
-.coinInfoTitle span {
-    font-size: 1.5rem;
-}
+    .coinInfoTitle {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .coinInfoTitle h1 {
+        font-size: 2rem;
+    }
+    
+    .coinInfoTitle span {
+        font-size: 1.5rem;
+    }
 }
